yoshimi 1.5.10 M

2019-2-6 Will
* Almost completed GUI detachment for headless.
* Applied patch from Rob - completes headless builds.

2019-2-1 Will
* Enabled headless build (Not LV2).
  Not fully tested.

2019-1-27 Will
* Enabled full CLI start sequence .state .xmz .xiz .xly
  but can be either jack session or state not both.

2019-1-24 Will
* Complex float rounding towards zero now just int(n).
  Rationale: This in most cases restores the original
  Zyn 2.2.1 method. Also, the assembler hack used to get
  faster performance is not portable across CPU types.
  These conversion were all for positive only values so
  there is no +- zero issue and the int+truncf combination
  is *much* slower than just int, yet does exacly the same.

2019-1-23 Will
* Removed all remaining mutex references.
  Already almost entirely commented out.

2019-1-22 Will
* BugFix: missing 'else' so CLI filter not seeing L1/H1.
* Implemented loading MIDI learn fro CLI.
  Currently it seems you can only set one command line
  argument. Observed priority is .state .xmz .xiz .xly
  Need to see if this can be made recursive.
* Minor adustments to startup handover.

2019-1-20 Will
* Sending SIGUSR2 to running Yoshimi starts new instance.
* Yoshimi hands over startup if there's a running instance.

2019-1-13 Will
* Confirmed previous fix and set release as 1.5.10.1

2019-1-12 Rob, Will, Hermann
* BugFix: Changes to CMakeLists.txt failed fedora build.
  Directly setting CMAKE_CXX_FLAGS overwrote previously
  defined flags the distro package required. We now add
  our settings as a prefix to existing CMAKE_CXX_FLAGS
  so the distro values take priority.
* Changed Examples/synth_prelude files to link to original.
  Done to avoid possible licensing issues.
* Added new warning file to dev_notes about spelling errors.
* Set bugfix release as 1.5.10.1 rc1

2019-1-6 Will
* Modified 'main' to remove stand-alone/LV2 build contention.
* Bank.h, Config.h, Config.cpp no longer different builds.