@@ -1,5 +1,10 @@
 yoshimi 1.5.10 M
 
+2019-02-10 Rob
+* put FLTK sources & libs back in old places in CMakeLists -- tacking
+  the libs on at end of the list sometimes broke linker command line.
+  It's an empty string when GUI_FLTK=0, anyway.
+
 2019-2-6 Will
 * Almost completed GUI detachment for headless.
 * Applied patch from Rob - completes headless builds.
